src/modules/75-cf/pages/feature-flags-detail/FeatureFlagsDetailPage.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.flag-activation-details-layout {
  padding: var(--spacing-xlarge) !important;
  z-index: 1;
  height: 100%;
  width: 460px;

  background: var(--grey-0) !important;
  box-shadow: var(--elevation-2);
  display: flex;
  gap: var(--spacing-large);
}
.spinner {
  display: flex;
  align-items: center;
  justify-content: center;
}

.page-layout {
  height: var(--page-min-height, 100vh);
  display: grid;
  grid-template-columns: 460px 1fr;
  overflow-y: hidden;
  section:nth-of-type(1) {
    background-color: var(--grey-0);
    z-index: 1;
  }
}

